# jig

./: .gitignore  .goreleaser.yaml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  demo.tape  go.mod  go.sum  homebrew.md  install.sh  justfile
.claude/: settings.local.json
.claude/agents/: jig-developer.md
.github/workflows/: ci.yml  release.yml
cmd/jig/: completion.go  doctor.go  init_cmd.go  profiles.go  profiles_create.go  profiles_delete.go  profiles_edit.go  profiles_export.go  profiles_list.go  profiles_show.go  profiles_validate.go  root.go  run.go  tui.go
crates/jig-cli/: Cargo.toml
crates/jig-cli/src/: approval.rs  cli.rs  main.rs  subcommands.rs
crates/jig-core/: Cargo.toml
crates/jig-core/src/: defaults.rs  editor.rs  history.rs  lib.rs  worktree.rs
crates/jig-core/src/assembly/: executor.rs  global_lock.rs  lockfile.rs  mcp.rs  mod.rs  permissions.rs  preview.rs  prompt.rs  skill_index.rs  skill_meta.rs  skills.rs  skills_lock.rs  source_resolver.rs  stage.rs  sync.rs
crates/jig-core/src/config/: migrate.rs  mod.rs  resolve.rs  schema.rs  validate.rs
crates/jig-core/src/config/migration/: mod.rs  v1_to_v2.rs
crates/jig-core/src/security/: approval.rs  mod.rs
crates/jig-tui/: Cargo.toml
crates/jig-tui/src/: app.rs  launch.rs  lib.rs  theme.rs
crates/jig-tui/src/editor/: mod.rs  render.rs  save_popup.rs  sections.rs  undo.rs  which_key.rs
crates/jig-tui/src/widgets/: filterable_list.rs  markdown_viewer.rs  mod.rs
docs/: jig-prd-v0.6.0.md  playbook-phase-1.md  playbook-phase-3.md  playbook-phase-4.md
docs/brainstorms/: 2026-03-25-jig-technical-and-ux-brainstorm.md
docs/plans/: 2026-03-25-feat-jig-core-and-tui-implementation-plan.md
docs/prd/: jig-prd-v0.6.0.md  jig-prd-v1.0.0.md  jig-prd-v1.1.0.md  jig-prd-v1.2.0.md  jig-prd-v1.3.0.md  jig-prd-v1.4.0.md
examples/: backend.yaml  base.yaml  code-review.yaml  frontend.yaml  quick-fix.yaml  writing.yaml
internal/claude/: claude_test.go  cleanup.go  detect.go  flags.go  launch.go  mcp.go  mcp_test.go  plugin.go  plugin_extra_test.go
internal/config/: config_test.go  defaults.go  loader.go  loader_test.go  merge.go  paths.go  profile.go  resolve.go  resolve_test.go  store.go  store_test.go  suggest.go  suggest_test.go  validate.go
internal/plugin/: plugin_test.go  resolver.go  resolver_extra_test.go  types.go
internal/scanner/: scanner.go  scanner_extra_test.go  scanner_test.go  sources.go
internal/tui/: app.go  app_test.go  theme.go
internal/tui/screens/: editor.go  editor_extra_test.go  editor_test.go  home.go  picker.go  preview.go
internal/tui/shared/: header.go  header_test.go  shared.go  shared_test.go
test/integration/: integration_test.go
