[package]
name = "jig-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "jig"
path = "src/main.rs"

[dependencies]
jig-core = { path = "../jig-core" }
jig-tui = { path = "../jig-tui", optional = true }
clap = { workspace = true }
clap_complete = { workspace = true }
miette = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
home = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
jig-core = { path = "../jig-core" }

[features]
default = ["tui"]
tui = ["dep:jig-tui"]

[package.metadata.binstall]
pkg-url = "https://github.com/jdforsythe/jig/releases/download/v{ version }/{ name }-{ target }{ binary-ext }"
bin-dir = "{ name }{ binary-ext }"
pkg-fmt = "bin"

[package.metadata.binstall.overrides]
"x86_64-apple-darwin" = { pkg-url = "https://github.com/jdforsythe/jig/releases/download/v{ version }/jig-macos-x86_64" }
"aarch64-apple-darwin" = { pkg-url = "https://github.com/jdforsythe/jig/releases/download/v{ version }/jig-macos-arm64" }
"x86_64-unknown-linux-gnu" = { pkg-url = "https://github.com/jdforsythe/jig/releases/download/v{ version }/jig-linux-x86_64" }
"aarch64-unknown-linux-gnu" = { pkg-url = "https://github.com/jdforsythe/jig/releases/download/v{ version }/jig-linux-aarch64" }

[lints]
workspace = true
